Set HTML5 parameter to true within the createSound component in order to force sounds to load and play again when a user is on mobile. This should fix the issue that happens when a user switches to another app for a while then comes back to play sounds again. Also added the 'unmute-ios-audio' to allow sounds to be played even if user has iPhone mute switch on. Of course, the user will still need to tap on the strings to make the sounds.

--- a/public/styles.css
+++ b/public/styles.css
@@ -84,7 +84,7 @@ hr {
 
 .App-Container-Standard {
     background-color:rgba(0, 25, 63, 0.2);
-    border: 1px solid green;
+    border: 1px solid blue;
     display: flex;
     flex-direction: column;
     justify-content: center;
